--- a/EzOrder(Cus)/View/AD.storyboard
+++ b/EzOrder(Cus)/View/AD.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--EzOrder-->
+        <!--View Controller-->
         <scene sceneID="B8Z-Hf-DHO">
             <objects>
                 <viewController id="iB0-1e-Vfd" customClass="ADViewController" customModule="EzOrder_Cus_" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,25 +19,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g8q-XL-ilO">
-                                <rect key="frame" x="0.0" y="64" width="375" height="369.5"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="360"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleAspectFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="VVW-bt-fcR">
-                                        <rect key="frame" x="0.0" y="0.0" width="1875" height="369.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="1875" height="360"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD1" translatesAutoresizingMaskIntoConstraints="NO" id="gDy-jO-Yk2">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="369.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="360"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD2" translatesAutoresizingMaskIntoConstraints="NO" id="LLr-lI-vPs">
-                                                <rect key="frame" x="375" y="0.0" width="375" height="369.5"/>
+                                                <rect key="frame" x="375" y="0.0" width="375" height="360"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD3" translatesAutoresizingMaskIntoConstraints="NO" id="zYl-cq-TfZ">
-                                                <rect key="frame" x="750" y="0.0" width="375" height="369.5"/>
+                                                <rect key="frame" x="750" y="0.0" width="375" height="360"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD4" translatesAutoresizingMaskIntoConstraints="NO" id="Iq4-zp-gEO">
-                                                <rect key="frame" x="1125" y="0.0" width="375" height="369.5"/>
+                                                <rect key="frame" x="1125" y="0.0" width="375" height="360"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD5" translatesAutoresizingMaskIntoConstraints="NO" id="cVK-Fv-3i2">
-                                                <rect key="frame" x="1500" y="0.0" width="375" height="369.5"/>
+                                                <rect key="frame" x="1500" y="0.0" width="375" height="360"/>
                                             </imageView>
                                         </subviews>
                                         <connections>
@@ -55,12 +55,11 @@
                                 </constraints>
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hidesForSinglePage="YES" numberOfPages="5" translatesAutoresizingMaskIntoConstraints="NO" id="lcX-Mh-b3t">
-                                <rect key="frame" x="152" y="396.5" width="71" height="37"/>
+                                <rect key="frame" x="152" y="387" width="71" height="37"/>
                             </pageControl>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qO5-AO-bbI">
-                                <rect key="frame" x="0.0" y="463" width="375" height="154.5"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.98039215690000003" green="0.80000000000000004" blue="0.79215686269999996" alpha="1" colorSpace="calibratedRGB"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qO5-AO-bbI">
+                                <rect key="frame" x="0.0" y="469.5" width="375" height="138.5"/>
+                                <color key="backgroundColor" red="1" green="0.9258347602" blue="0.93915881850000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NBO-SN-M09">
                                     <size key="itemSize" width="293" height="141.5"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -69,7 +68,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="rankCell" id="7iu-lO-WGq" customClass="RankCollectionViewCell" customModule="EzOrder_Cus_" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="6.5" width="293" height="141.5"/>
+                                        <rect key="frame" x="0.0" y="-1.5" width="293" height="141.5"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="293" height="141.5"/>
@@ -112,27 +111,50 @@
                                     <outlet property="delegate" destination="iB0-1e-Vfd" id="m87-1K-3Of"/>
                                 </connections>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="推薦餐廳" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="02v-ub-LDE">
-                                <rect key="frame" x="6" y="438" width="102" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="推薦餐廳" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="02v-ub-LDE">
+                                <rect key="frame" x="5" y="445.5" width="82" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.98039215690000003" green="0.80000000000000004" blue="0.79215686269999996" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="0.92583476024520539" blue="0.93915881850000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="g8q-XL-ilO" firstAttribute="top" secondItem="dpd-lJ-0Wh" secondAttribute="top" id="0NV-ju-kQA"/>
+                            <constraint firstItem="qO5-AO-bbI" firstAttribute="bottom" secondItem="dpd-lJ-0Wh" secondAttribute="bottom" constant="-10" id="8ev-4n-h8F"/>
                             <constraint firstItem="g8q-XL-ilO" firstAttribute="leading" secondItem="dpd-lJ-0Wh" secondAttribute="leading" id="BKt-mT-7xo"/>
+                            <constraint firstItem="qO5-AO-bbI" firstAttribute="top" secondItem="02v-ub-LDE" secondAttribute="bottom" id="ECU-Rb-ZBs"/>
                             <constraint firstItem="lcX-Mh-b3t" firstAttribute="centerX" secondItem="JqD-Rs-pIA" secondAttribute="centerX" id="EUy-5j-c56"/>
                             <constraint firstItem="g8q-XL-ilO" firstAttribute="trailing" secondItem="dpd-lJ-0Wh" secondAttribute="trailing" id="JlF-fy-VPO"/>
-                            <constraint firstItem="g8q-XL-ilO" firstAttribute="height" secondItem="dpd-lJ-0Wh" secondAttribute="height" multiplier="2/3" id="UJ4-bl-RAD"/>
+                            <constraint firstItem="02v-ub-LDE" firstAttribute="leading" secondItem="dpd-lJ-0Wh" secondAttribute="leading" constant="5" id="SQ1-PR-HGw"/>
+                            <constraint firstItem="g8q-XL-ilO" firstAttribute="height" secondItem="dpd-lJ-0Wh" secondAttribute="height" multiplier="13/20" id="UJ4-bl-RAD"/>
+                            <constraint firstItem="qO5-AO-bbI" firstAttribute="leading" secondItem="dpd-lJ-0Wh" secondAttribute="leading" id="ZUg-cy-hzd"/>
+                            <constraint firstItem="qO5-AO-bbI" firstAttribute="trailing" secondItem="dpd-lJ-0Wh" secondAttribute="trailing" id="d0O-fJ-CdV"/>
+                            <constraint firstItem="qO5-AO-bbI" firstAttribute="height" secondItem="dpd-lJ-0Wh" secondAttribute="height" multiplier="5/20" id="dye-xo-Zhp"/>
                             <constraint firstItem="lcX-Mh-b3t" firstAttribute="bottom" secondItem="g8q-XL-ilO" secondAttribute="bottom" id="yo0-UZ-8o1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dpd-lJ-0Wh"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="favorites" id="9nv-Y8-nWl"/>
-                    <navigationItem key="navigationItem" title="EzOrder" id="fHE-ZA-A20"/>
+                    <navigationItem key="navigationItem" id="fHE-ZA-A20">
+                        <nil key="title"/>
+                        <view key="titleView" contentMode="scaleToFill" id="Qtk-lZ-HoU">
+                            <rect key="frame" x="87.5" y="7" width="200" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="navImg" translatesAutoresizingMaskIntoConstraints="NO" id="tJj-Qy-IRk">
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="tJj-Qy-IRk" firstAttribute="centerX" secondItem="Qtk-lZ-HoU" secondAttribute="centerX" id="84e-iV-W9m"/>
+                                <constraint firstItem="tJj-Qy-IRk" firstAttribute="top" secondItem="Qtk-lZ-HoU" secondAttribute="top" id="KYW-TW-Dl6"/>
+                                <constraint firstItem="tJj-Qy-IRk" firstAttribute="leading" secondItem="Qtk-lZ-HoU" secondAttribute="leading" id="cLG-cQ-xwI"/>
+                                <constraint firstAttribute="bottom" secondItem="tJj-Qy-IRk" secondAttribute="bottom" id="exz-2L-PdX"/>
+                            </constraints>
+                        </view>
+                    </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imgAd1" destination="gDy-jO-Yk2" id="scd-PB-HoX"/>
@@ -162,7 +184,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UoG-eN-lfT">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.98823529409999999" green="0.45098039220000002" blue="0.45098039220000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.9882352941176471" green="0.45098039215686275" blue="0.45098039215686275" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -180,5 +202,6 @@
         <image name="AD3" width="5184" height="3456"/>
         <image name="AD4" width="5472" height="3648"/>
         <image name="AD5" width="4076" height="2712"/>
+        <image name="navImg" width="206" height="73"/>
     </resources>
 </document>
